force-app/main/default/objects/Process_Attribute_Details__c/Process_Attribute_Details__c.object-meta.xml
<CustomObject>
    <description>Object to define the step and task of a process.</description>
    <label>Process Attribute Details</label>
    <nameField>
        <label>PAD ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Attribute Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>