force-app/main/default/objects/Process_Attribute_Details__c/fields/Action_URL__c.field-meta.xml
<CustomField>
    <fullName>Action_URL__c</fullName>
    <description>The flow , aura component or the LWC component URL in will give the edit and view of the page layout</description>
    <label>Action URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>