force-app/main/default/objects/Process_Attribute_Details__c/fields/Additional_Report_Task__c.field-meta.xml
<CustomField>
    <fullName>Additional_Report_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Report Task</label>
    <type>Checkbox</type>
</CustomField>