force-app/main/default/objects/Process_Attribute_Details__c/fields/Allowed_No_Of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Allowed_No_Of_Attempts__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Allowed No Of Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>