force-app/main/default/objects/Process_Attribute_Details__c/fields/Business_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Step_Number__c</fullName>
    <label>Business Step Number</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>