force-app/main/default/objects/Process_Attribute_Details__c/fields/Communication_Template__c.field-meta.xml
<CustomField>
    <fullName>Communication_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication Template</label>
    <referenceTo>Communication_Template__c</referenceTo>
    <relationshipLabel>Process Attribute Details</relationshipLabel>
    <relationshipName>Process_Attribute_Details</relationshipName>
    <type>Lookup</type>
</CustomField>