force-app/main/default/objects/Process_Attribute_Details__c/fields/Delete_No_Of_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Delete_No_Of_Attempt__c</fullName>
    <defaultValue>&apos;1&apos;</defaultValue>
    <label>Delete No Of Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_No</valueSetName>
    </valueSet>
</CustomField>