force-app/main/default/objects/Process_Attribute_Details__c/fields/Dependent_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Dependent_of_Tasks__c</fullName>
    <description>List of all the dependent Task (Comma seperated Values)</description>
    <inlineHelpText>List of all the dependent Task (Comma seperated Values)</inlineHelpText>
    <label>Dependent of Tasks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>