force-app/main/default/objects/Process_Attribute_Details__c/fields/Is_Review_Task__c.field-meta.xml
<CustomField>
    <fullName>Is_Review_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Review Task</label>
    <type>Checkbox</type>
</CustomField>