force-app/main/default/objects/Process_Attribute_Details__c/fields/Process_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute__c</fullName>
    <label>Process Attribute</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Process_Attribute__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Process_Attribute__c</referenceTo>
    <relationshipLabel>Process Attribute Details</relationshipLabel>
    <relationshipName>Process_Attribute_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>