force-app/main/default/objects/Process_Attribute_Details__c/fields/Process_Component__c.field-meta.xml
<CustomField>
    <fullName>Process_Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Component</label>
    <referenceTo>Process_Component__c</referenceTo>
    <relationshipLabel>Process Attribute Details</relationshipLabel>
    <relationshipName>Process_Attribute_Details</relationshipName>
    <type>Lookup</type>
</CustomField>