force-app/main/default/objects/Process_Attribute_Details__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <label>Related To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Onboarding</fullName>
            </value>
            <value>
                <fullName>EL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>