force-app/main/default/objects/Process_Attribute_Details__c/fields/Sobject_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Sobject_RecordType__c</fullName>
    <label>Sobject RecordType Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Onboarding</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Business Team EL</fullName>
            </value>
            <value>
                <fullName>Business Team AltiFi</fullName>
            </value>
            <value>
                <fullName>SMS Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>