force-app/main/default/objects/Process_Attribute_Details__c/fields/Stage_SL_No__c.field-meta.xml
<CustomField>
    <fullName>Stage_SL_No__c</fullName>
    <label>Stage/Step SL No</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_No</valueSetName>
    </valueSet>
</CustomField>