force-app/main/default/objects/Process_Attribute_Details__c/fields/Stage_Step__c.field-meta.xml
<CustomField>
    <fullName>Stage_Step__c</fullName>
    <description>To capture the stage of the process. A stage can have one or multiple task associated with it.</description>
    <label>Stage/Step</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stage</valueSetName>
    </valueSet>
</CustomField>