force-app/main/default/objects/Process_Attribute_Details__c/fields/Task_Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Approver_Type__c</fullName>
    <label>Task Approver Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Owner_Type</valueSetName>
    </valueSet>
</CustomField>