force-app/main/default/objects/Process_Attribute_Details__c/fields/Task_Automation__c.field-meta.xml
<CustomField>
    <fullName>Task_Automation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Task Automation</label>
    <type>Checkbox</type>
</CustomField>