force-app/main/default/objects/Process_Attribute_Details__c/fields/Task_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner_Name__c</fullName>
    <label>Task Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>