force-app/main/default/objects/Process_Attribute_Details__c/fields/Task_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner_Type__c</fullName>
    <description>Details of the owner/executer of the task</description>
    <label>Task Owner Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Task_Owner_Type</valueSetName>
    </valueSet>
</CustomField>