force-app/main/default/objects/Process_Attribute_Details__c/fields/Task_Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Reviewer_Name__c</fullName>
    <label>Task Reviewer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>