force-app/main/default/objects/Process_Attribute_Details__c/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <description>Action name (Subject) of the task</description>
    <inlineHelpText>Action name (Subject) of the task</inlineHelpText>
    <label>Task - Subject</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subject</valueSetName>
    </valueSet>
</CustomField>