force-app/main/default/objects/Process_Attribute_Details__c/fields/Task_Subject_Sl_No__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject_Sl_No__c</fullName>
    <label>Task - Subject Sl No</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_No</valueSetName>
    </valueSet>
</CustomField>