force-app/main/default/objects/Process_Attribute_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Process_Attribute__c</columns>
    <columns>NAME</columns>
    <columns>Task_Subject__c</columns>
    <columns>Action_URL__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Task_Owner_Type__c</columns>
    <columns>Task_Owner_Name__c</columns>
    <columns>Task_Reviwer_Type__c</columns>
    <columns>Task_Reviewer_Name__c</columns>
    <columns>Stage_Step__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>